# warren-tdbp

./: .gitignore  Makefile  docker-compose.yml
docs/: pyproject.toml
production/: README.md  docker-compose.prod.yml
production/db-init/: init.sh
production/env.d/: api.env  app.env  postgresql.env
src/api/: Dockerfile  logging-config.dev.yaml  pyproject.toml
src/api/plugins/tdbp/: __init__.py  conf.py  pyproject.toml
src/api/plugins/tdbp/tests/: __init__.py  test_api.py
src/api/plugins/tdbp/warren_tdbp/: __init__.py  api.py  indicators.py  models.py
src/api/warren_tdbp/: api.py
src/frontend/apps/web/components/AppContentLoader/: index.tsx
