#
# Warren TdBP's documentation package
#
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warren-tdbp-docs"
description = "Documentation for the Warren TdBP project"
authors = [
    { name="APUI (Avignon University)", email="amelie.soubrat@univ-avignon.fr" },
    { name="Open FUN (France Universite Numerique)", email="fun.dev@fun-mooc.fr" },
]
version = "0.0.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
license = {file = "LICENSE.md"}
keywords = ["Analytics", "xAPI", "LRS", "LTI"]
dependencies = [
    "mike==2.0.0",
    "mkdocs-material==9.5.13",
    "mkdocs==1.5.3",
    "neoteroi-mkdocs==1.0.5",
    "pymdown-extensions==10.7.1",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/apui-avignon-university/warren-tdbp"
"Bug Tracker" = "https://github.com/apui-avignon-university/warren-tdbp/issues"

[tool.setuptools]
packages = []
